--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
       .hitbox {
         background-color: transparent;
-        border: 2px solid red;
+        /* border: 2px solid red; */
         position: absolute;
         inset: 0;
         cursor: pointer;
@@ -34,6 +34,11 @@
           class="hitbox"
           style="width: 34vw; height: 17vh; top: 22vh; left: 33vw"
         ></div>
+        <div
+          onclick="goTo(4)"
+          class="hitbox"
+          style="width: 34vw; height: 17vh; top: 54vh; left: 33vw"
+        ></div>
       </div>
       <div class="page">
         <img src="views/girl-brief.png" alt="" />
@@ -48,6 +53,26 @@
       </div>
       <div class="page">
         <img src="views/girl-messages.png" alt="" />
+        <div
+          onclick="playPause()"
+          class="hitbox"
+          style="width: 88vw; height: 25vh; top: 16vh; left: 5vw"
+        ></div>
+      </div>
+      </div>
+      <div class="page">
+        <img src="views/boy-brief.png" alt="" />
+      </div>
+      <div class="page">
+        <img src="views/boy-notification.png" alt="" />
+        <div
+          onclick="goNext()"
+          class="hitbox"
+          style="width: 34vw; height: 9vh; top: 76vh; left: 9vw"
+        ></div>
+      </div>
+      <div class="page">
+        <img src="views/boy-messages.png" alt="" />
         <div
           onclick="playPause()"
           class="hitbox"
@@ -77,8 +102,16 @@
         "sea",
         "flowers",
         "flower",
+        "dad",
+        "did",
+        "data",
+        "dead",
+        "ask",
+        "asked",
+        "finish",
+        "meal"
       ];
-      const endingWords = ["listen", "to me", "first", "sent", "felt"];
+      const endingWords = ["listen", "to me", "first", "sent", "felt","hate", "ate", "heard" ,"punishment",'punishments'];
 
       const pages = Array.from(document.querySelectorAll("main > .page"));
       console.log(pages);
@@ -95,7 +128,7 @@
       }
 
       function refreshView() {
-        if (displayIndex == 1) {
+        if (displayIndex == 1 || displayIndex == 4) {
           isListening = true;
         } else {
           isListening = false;
@@ -153,7 +186,7 @@
 
       async function init() {
         const channel = new MessageChannel();
-        const model = await Vosk.createModel("vosk-model-small-en-us-0.15.zip");
+        const model = await Vosk.createModel("/yao/vosk-model-small-en-us-0.15.zip");
         model.registerPort(channel.port1);
 
         const sampleRate = 48000;
